# aerodynamic_RAG__analyser

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  pyproject.toml
app/: main.py
app/api/: auth.py  concepts.py  evaluations.py  reports.py
app/core/: config.py  exceptions.py  security.py
app/domain/: models.py  schemas.py
app/infrastructure/: database.py  llm_client.py  vector_store.py
app/mcp/: __init__.py  server.py  tool_service.py
app/services/: auth_service.py  concept_service.py  rag_service.py  report_service.py
docs/: API_DOCUMENTATION.md  MCP_INTEGRATION_GUIDE.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/auth/: ProtectedRoute.jsx
frontend/src/components/common/: ErrorBoundary.jsx  ErrorDisplay.jsx  Toast.jsx
frontend/src/components/concepts/: ConceptCard.jsx  ConceptForm.jsx
frontend/src/components/evaluations/: CitationCard.jsx  (+2 more)
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Documentation.jsx  HealthCheck.jsx  HowItWorks.jsx  Login.jsx  Register.jsx  Reports.jsx
frontend/src/services/: api.js
frontend/src/utils/: errors.js
scripts/: demo_mcp_flow.py  fetch_papers.py  generate_api_docs_pdf.py  ingest_documents.py  setup_db.py  test_evaluation.py  verify_retrieval.py
tests/: auth_helpers.py  test_api_errors.py  test_auth.py  test_concepts.py  test_database_errors.py  test_e2e.py  test_fixtures.py  test_reports.py
(+4 files in other folders)
