[project]
name = "aerodynamic-rag-analyser"
version = "0.1.0"
description = "AI-augmented aerodynamic concept evaluation API using Retrieval-Augmented Generation"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.2.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "chromadb>=0.6.0",
    "openai>=1.60.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.0",
    "arxiv>=2.1.3",
    "pypdf>=5.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
docs = [
    "markdown>=3.7",
    "xhtml2pdf>=0.2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
